[gd_scene load_steps=14 format=3 uid="uid://mabbruid8hy5"]

[ext_resource type="Script" uid="uid://giv7366j4an5" path="res://Menu/main_menu.gd" id="1_n8aby"]
[ext_resource type="Texture2D" uid="uid://c81epeke3tqbk" path="res://assets/backgrounds/title.png" id="2_rp0vd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ffa"]
atlas = ExtResource("2_rp0vd")
region = Rect2(0, 0, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvecl"]
atlas = ExtResource("2_rp0vd")
region = Rect2(256, 0, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn8ug"]
atlas = ExtResource("2_rp0vd")
region = Rect2(512, 0, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ie6l"]
atlas = ExtResource("2_rp0vd")
region = Rect2(768, 0, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4pu2"]
atlas = ExtResource("2_rp0vd")
region = Rect2(0, 50, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1p1i"]
atlas = ExtResource("2_rp0vd")
region = Rect2(256, 50, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5xqh"]
atlas = ExtResource("2_rp0vd")
region = Rect2(512, 50, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aty3"]
atlas = ExtResource("2_rp0vd")
region = Rect2(768, 50, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_mumn6"]
atlas = ExtResource("2_rp0vd")
region = Rect2(0, 100, 256, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixeei"]
atlas = ExtResource("2_rp0vd")
region = Rect2(256, 100, 256, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_nwo0u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ffa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvecl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn8ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ie6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4pu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1p1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5xqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aty3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mumn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixeei")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n8aby")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
position = Vector2(0, 200)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_nwo0u")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 834.5
offset_top = 500.0
offset_right = 1085.5
offset_bottom = 558.0
theme_override_font_sizes/font_size = 36
text = "MENU_START"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 834.5
offset_top = 562.0
offset_right = 1085.5
offset_bottom = 640.0
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="EnButton" type="Button" parent="MarginContainer2/HBoxContainer"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "English"

[node name="JaButton" type="Button" parent="MarginContainer2/HBoxContainer"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "日本語"

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -198.0
offset_top = -280.0
offset_right = 198.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer4/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "MENU_AUDIO_MASTER"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer4/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer4/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "MENU_AUDIO_MUSIC"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer4/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer4/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "MENU_AUDIO_SFX"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer4/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/EnButton" to="." method="_on_en_button_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/JaButton" to="." method="_on_ja_button_pressed"]
[connection signal="value_changed" from="VBoxContainer4/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer4/VBoxContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer4/VBoxContainer3/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
